# VECTRA

./: .gitignore  LICENSE  README.md  kaggle_vectra_utility.ipynb  pyproject.toml  vectra_impact_demo.ipynb
.github/workflows/: workflow.yml
data/: smoke.jsonl
docs/: technical-method.md
scripts/: run_vectra_terminal_demo.ps1
src/vectra/: __init__.py  __main__.py  controller.py  eval.py  executor.py  llm_client.py  registry.py  solve.py  solve_scenario.py  transformers_client.py  types.py  vllm_server.py
src/vectra/policies/: __init__.py  base.py
src/vectra/roles/: __init__.py  base.py  critic.py  judge.py  solver_variants.py
src/vectra/scenario/: __init__.py  attempts.py  reactor.py  state.py
src/vectra/tools/: __init__.py  python_tool.py  tool_loop.py
tests/: test_scenario_core.py  test_smoke.py
tools/: run_vectra_impact_cli.py  write_kaggle_utility_notebook.py
