[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vectra-reasoning"
version = "0.1.0"
description = "Improving LLM reasoning accuracy via multi-agent optimization (OpenAI-compatible)."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Gokul Prasath M", email = "beastgokul4@gmail.com" }]
license = { file = "LICENSE" }
keywords = ["llm", "reasoning", "reasoning-accuracy", "multi-agent", "optimization", "orchestration", "batching"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "httpx>=0.26",
]

[project.scripts]
vectra = "vectra.__main__:main"

[project.urls]
Documentation = "https://github.com/GokulPrasathM/VECTRA#readme"
Repository = "https://github.com/GokulPrasathM/VECTRA"
Issues = "https://github.com/GokulPrasathM/VECTRA/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.4",
]

# Optional: local open-source model inference for demos/notebooks.
transformers = [
  "transformers>=4.38",
  "accelerate>=0.27",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
